--- a/index.html
+++ b/index.html
@@ -6,22 +6,18 @@
 <script>
 $(document).ready(function(){
 
-    $(".selamet li").click(function(){
-        var indis = $(this).index()
-       // alert(indis);
-       $("#Selamet").hide(100);
-    });
+    $("button").click(function(){
+        var deger = $("input[name=deger]").val();
+        deger = $.trim();
+        if(!deger){
+            alert("Boş bırakmayın");
+        }
+    })
 });
 </script>
 </head>
 <body>
-    <div class="selamet">Bana Tıkla</div>
-    <ul class="selamet">
-        <li>1.Li</li>
-        <li>2.Li</li>
-        <li>3.Li</li>
-        <li>4.Li</li>
-    </ul>
-    <div id="Selamet"> Burası birazdan kaldırılacaktır.</div>
+    <input type="text" name="Değer">
+    <button>sonucu al</button>
 </body>
 </html>
