--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
 <script>
 $(document).ready(function(){
 
-    $("#Selamet li").each(function(index,element){
-        $(element).text("li - "+index)
+
+
+    $("#gel_buraya").hover(function(){
+        $("#Selamet li").hide();
+    },function(){
+        $("#Selamet li").show();
     })
+
+    
 
 });
 
@@ -16,18 +22,15 @@ $(document).ready(function(){
 
 </head>
 <body>
+    <div>
+        <p id="gel_buraya">gel buraya</p>
     <ul id="Selamet">
         <li><a href="#">1. Tab</a></li>
         <li><a href="#">2. Tab</a></li>
         <li><a href="#">3. Tab</a></li>
     </ul>
 
-    <ul>
-        <li><a href="#">1. Tab</a></li>
-        <li><a href="#">2. Tab</a></li>
-        <li><a href="#">3. Tab</a></li>
-    </ul>
-
-    
+   
+</div>
 </body>
 </html>
