--- a/index.html
+++ b/index.html
@@ -6,13 +6,7 @@
 <script>
 $(document).ready(function(){
 
-
-
-    $("#gel_buraya").hover(function(){
-        $("#Selamet li").hide();
-    },function(){
-        $("#Selamet li").show();
-    })
+    $("ul li").eq(4).css("background-color","lightgreen");
 
     
 
@@ -23,11 +17,14 @@ $(document).ready(function(){
 </head>
 <body>
     <div>
-        <p id="gel_buraya">gel buraya</p>
+    <p id="gel_buraya">gel buraya</p>
     <ul id="Selamet">
         <li><a href="#">1. Tab</a></li>
         <li><a href="#">2. Tab</a></li>
         <li><a href="#">3. Tab</a></li>
+        <li><a href="#">4. Tab</a></li>
+        <li><a href="#">5. Tab</a></li>
+        <li><a href="#">6. Tab</a></li>
     </ul>
 
    
