--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <script>
 $(document).ready(function(){
 
-    $("button").click(function(){
-        $(this).parent().parent().remove();
+    $("button").click(function(e){
+        var deger = $("#form1").serialize();
+        alert(deger);
     })
-    
 
 });
 
@@ -17,17 +17,26 @@ $(document).ready(function(){
 
 </head>
 <body>
-    <div>
-    <p id="gel_buraya">gel buraya</p>
-    <ul id="Selamet">
-        <li><a href="#">1. Tab <button>Kapat</button></a></li>
-        <li><a href="#">2. Tab <button>Kapat</button></a></li>
-        <li><a href="#">3. Tab <button>Kapat</button></a></li>
-        <li><a href="#">4. Tab <button>Kapat</button></a></li>
-        <li><a href="#">5. Tab <button>Kapat</button></a></li>
-        <li><a href="#">6. Tab <button>Kapat</button></a></li>
-    </ul>
-
+<div>
+<form action="" id="form1">
+    <table>
+        <tr>
+            <td>Kullanıcı adı:</td>
+            <td><input type="text" name="kadi"></td>
+        </tr>
+        <tr>
+            <td>E-Posta:</td>
+            <td><input type="text" name="kadi"></td>
+        </tr>
+        <tr>   
+            <td>Şifre:</td>
+            <td><input type="password" name="parola"></td>
+        </tr>
+        <tr>
+            <td><button name="kaydet">Kaydet</button></td>
+        </tr>
+    </table>
+</form>        
    
 </div>
 </body>
