--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <script>
 $(document).ready(function(){
 
-    var deger =$('#div').html();
-    alert(deger);
-    $("#div2").html(deger);
+    $('button').click(function(e){
+        $('input').val("yeni değer")
+    });
     
 });
 
