--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <script>
 $(document).ready(function(){
 
-    $("#input").next().hide()
+    $("img").error(function(){
+        $(this).attr("src","eklenecek url")
+    });
 
 });
 
